[gd_scene load_steps=2 format=3 uid="uid://c31spp4fi4xt3"]

[ext_resource type="Script" path="res://sound_source/sound_source.gd" id="1_ktgev"]

[node name="sound_source" type="HBoxContainer"]
offset_right = 400.0
offset_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ktgev")

[node name="vol" type="VSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 1
max_value = 2.0
step = 0.05
value = 0.5

[node name="snd" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="pan" type="HSlider" parent="snd"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="play" type="Button" parent="snd"]
layout_mode = 2
text = "Play"

[node name="stop" type="Button" parent="snd"]
layout_mode = 2
text = "Stop"

[node name="progress" type="ProgressBar" parent="snd"]
layout_mode = 2

[connection signal="value_changed" from="vol" to="." method="_on_vol_value_changed"]
[connection signal="value_changed" from="snd/pan" to="." method="_on_pan_value_changed"]
[connection signal="pressed" from="snd/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="snd/stop" to="." method="_on_stop_pressed"]
[connection signal="gui_input" from="snd/progress" to="." method="_on_progress_gui_input"]
